--- a/index.html
+++ b/index.html
@@ -186,15 +186,15 @@
 			<!--最外面的DIV，用来包含里面的结构-->
 			<div id="game">
 				<!--游戏区,大DIV方块-->
-				<div id="d1" onclick="move(1)"></div>
+				<div id="d1" onclick="move(1)">1</div>
 				<!--小DIV，也就是8个小方块。当点击的时候执行move()函数，参数是显示的编号，这样我们就知道点击了哪个方块-->
-				<div id="d2" onclick="move(2)"></div>
-				<div id="d3" onclick="move(3)"></div>
-				<div id="d4" onclick="move(4)"></div>
-				<div id="d5" onclick="move(5)"></div>
-				<div id="d6" onclick="move(6)"></div>
-				<div id="d7" onclick="move(7)"></div>
-				<div id="d8" onclick="move(8)"></div>
+				<div id="d2" onclick="move(2)">2</div>
+				<div id="d3" onclick="move(3)">3</div>
+				<div id="d4" onclick="move(4)">4</div>
+				<div id="d5" onclick="move(5)">5</div>
+				<div id="d6" onclick="move(6)">6</div>
+				<div id="d7" onclick="move(7)">7</div>
+				<div id="d8" onclick="move(8)">8</div>
 			</div>
 			<div id="control">
 				<!--游戏控制区-->
