改善个人主页

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Favicons
     ================================================== -->
 
-<link rel="shortcut icon" href="img/favicon_jianli.ico" type="image/x-icon">
+<link rel="shortcut icon" href="img/bitbug_favicon.ico" type="image/x-icon">
 
 
 <!-- Bootstrap -->
@@ -45,7 +45,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-terminal"></i>源码集合</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><i class=""></i>个人主页</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1>简历<span class="brand-heading">-源码集合</span></h1>
+                        <h1><span class="brand-heading">个人简历</span></h1>
                         <p class="intro-text">喜欢技术，热爱挑战</p>
                         <a href="#services" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -116,22 +116,22 @@
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-code"></i>
         <h4><strong>专业学历</strong></h4>
         <p>
-		专业：电子信息工程</br>
-		学历：大学本科</br>
+		专业：软件技术</br>
+		学历：大专</br>
 		
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-rocket"></i>
         <h4><strong>毕业学校</strong></h4>
         <p>
-		  毕业学校：浙江理工大学</br>
+		  毕业学校：中原工学院</br>
 		  学习技能：编程
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-bullseye"></i>
         <h4><strong>联系方式</strong></h4>
-        <p>QQ：406641830</br>
-		  邮箱：admin@ymjihe.com</p>
+        <p>QQ：745853073</br>
+		  邮箱：zby745853073@163.com</p>
       </div>
     </div>
   </div>
@@ -143,7 +143,7 @@
       <h2>项目 <strong>经验</strong></h2>
       <hr>
       <div class="clearfix"></div>
-      <p>主要涉及电商，金融，家装领域，包括PC端，手机端，微信端，移动APP端等等，主要技术是HTML+CSS+JS</p>
+      <p>主要涉及电商，包括PC端，手机端，微信端等等，主要技术是HTML+CSS+JS</p>
     </div>
     <div class="categories">
       <ul class="cat">
@@ -165,11 +165,12 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href='http://www.ymjihe.com' target='_blank' title="欧工商城">欧工商城</a></h4>
-                <small>技术：html+css+js</small>
+                <h4><a href='https://zby745853073.github.io/vuex/' target='_blank' title="VUEX">VUEX</a></h4>
+                <small>技术：vuex , vue</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/01.jpg" class="img-responsive" alt="欧工商城"></div>
+              <img src="img/portfolio/logo.png" class="img-responsive" style="width:1000rem;" alt="VUEX">
+			  </div>
           </div>
         </div>
 		
@@ -177,11 +178,11 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://www.ymjihe.com" target='_blank' title="财树理财">财树理财</a></h4>
+                <!-- <h4><a href="" target='_blank' title="财树理财">财树理财</a></h4> -->
                 <small>技术：HTML+CSS+JQuery</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/02.jpg" class="img-responsive" alt="财树理财"></div>
+              <img src="img/portfolio/02.jpg" class="img-responsive" alt=""></div>
           </div>
         </div>
 		
@@ -189,11 +190,11 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://www.ymjihe.com" target='_blank' title="IT技术之家">IT技术之家</a></h4>
+                <!-- <h4><a href="" target='_blank' title="IT技术之家">IT技术之家</a></h4> -->
                 <small>技术：Bootstrap+JQuery</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/03.jpg" class="img-responsive" alt="IT技术之家"></div>
+              <img src="img/portfolio/03.jpg" class="img-responsive" alt=""></div>
           </div>
         </div>
 		
@@ -201,22 +202,22 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href='http://www.ymjihe.com' target='_blank' title="久久基因">久久基因</h4>
+                <!-- <h4><a href='' target='_blank' title="久久基因">久久基因</h4> -->
                 <small>技术：Bootstrap+JQuery</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/04.jpg" class="img-responsive" alt="久久基因"></div>
+              <img src="img/portfolio/04.jpg" class="img-responsive" alt=""></div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href='http://www.ymjihe.com' target='_blank' title="纵横基因">纵横基因</a></h4>
+                <!-- <h4><a href='' target='_blank' title="纵横基因">纵横基因</a></h4> -->
                 <small>技术：HTML+CSS+JQuery</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/05.jpg" class="img-responsive" alt="纵横基因">
+              <img src="img/portfolio/05.jpg" class="img-responsive" alt="">
 			  </div>
           </div>
         </div>
@@ -224,18 +225,18 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://www.ymjihe.com" target='_blank' title="浙江网新恒天UED">浙江网新恒天UED</a></h4>
+                <!-- <h4><a href="" target='_blank' title="浙江网新恒天UED">浙江网新恒天UED</a></h4> -->
                 <small>技术：Bootstrap+JQuery</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/06.jpg" class="img-responsive" alt="浙江网新恒天UED"></div>
+              <img src="img/portfolio/06.jpg" class="img-responsive" alt="UED"></div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 branding app web">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://www.ymjihe.com" target='_blank' title="个人博客">个人博客</a></h4>
+                <h4><a href="" target='_blank' title="个人博客">个人博客</a></h4>
                 <small>技术：HTMl+CSS+JS+Wordpress</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
@@ -247,12 +248,12 @@
 		  
             <div class="hover-bg"> 
               <div class="hover-text">
-                <h4><a href='http://www.ymjihe.com' target='_blank' title="软装大师">软装大师 </a></h4>
+                <!-- <h4><a href='' target='_blank' title="软装大师">软装大师 </a></h4> -->
                 <small>技术：Bootstrap+JQuery</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> 
 				</div>
-              <img src="img/portfolio/08.jpg" class="img-responsive" alt="软装大师">
+              <img src="img/portfolio/08.jpg" class="img-responsive" alt="">
 		    </div>
           </div>
         </div>
@@ -272,13 +273,13 @@
       <div class="col-md-6">
         <div class="about-text"> <i class="fa fa-users"></i>
           <div class="padding-left"><h4>PC端</h4>
-          <p>熟练使用HTML/CSS技术，精通Javascript/jquery编程,能够熟练使用angularjs，reactjs等前端MVC框架进行模块开发，熟练的使用grunt，gulp等前端工具，了解less，sass，stylus，coffeescript等前端新技术</p></div>
+          <p>熟练使用HTML/CSS技术，精通Javascript/jquery编程,能够熟练使用vue，react等前端MVC框架进行模块开发，熟练的使用vs-code,HbuiderX等前端工具，了解less，sass，stylus等前端新技术</p></div>
           <i class="fa fa-magic"></i>
           <div class="padding-left"><h4>移动端</h4>
-          <p>熟练使用zepto.js，Frozen ui，Amaze ui等移动框架进行移动页面的开发，熟练使用threejs等js引擎进行3d效果和H5游戏的开发.</p></div>
+          <p>熟练使用zepto.js，mint ui，Elements ui等移动框架进行移动页面的开发，熟练使用css3,H5,ES6</p></div>
           <i class="fa fa-check-square-o"></i>
           <div class="padding-left"><h4>其它</h4>
-          <p>懂网站性能优化，网站百度排名和SEO优化，熟练使用photoshop等切图工具，会常见的UI技巧，懂Java，php等后台语言开发.</p></div>
+          <p>熟练使用photoshop等切图工具，会常见的UI技巧，懂node，php等后台语言开发.</p></div>
         </div>
       </div>
     </div>
@@ -290,28 +291,28 @@
 					<div class="col-md-3 col-sm-3">
 						<div class="achivement-box">
 							<i class="fa fa-smile-o"></i>
-							<span class="count">25</span>
+							<span class="count">22</span>
 							<h4>Age Years</h4>                            
 						</div>
 					</div> 
 					<div class="col-md-3 col-sm-3">
 						<div class="achivement-box">
 							<i class="fa fa-code"></i>
-							<span class="count">100000</span>
+							<span class="count">30000</span>
 							<h4>Code Amount</h4>                            
 						</div>
 					</div> 
 					<div class="col-md-3 col-sm-3">
 						<div class="achivement-box">
 							<i class="fa fa-check-square-o"></i>
-							<span class="count">4800</span>
+							<span class="count">3000</span>
                             <h4>Work Hour</h4>
 						</div>
 					</div> 
 					<div class="col-md-3 col-sm-3">
 						<div class="achivement-box">
 							<i class="fa fa-trophy"></i>
-							<span class="count">20</span>
+							<span class="count">10</span>
 							<h4>Projects Amount</h4>                            
 						</div>
 					</div> 
@@ -329,10 +330,10 @@
     <div id="row">
 	
 	<div class="col-md-3 col-sm-6">
-        <div class="thumbnail"> <img src="img/team/02.jpg" alt="浙江理工大学" class="img-circle team-img">
+        <div class="thumbnail"> <img src="img/team/02.jpg" alt="中原工学院" class="img-circle team-img">
           <div class="caption">
-            <h3>浙江理工大学</h3>
-            <p>电子信息工程</p>
+            <h3>中原工学院</h3>
+            <p>软件技术</p>
             <p>主要学习编程语言，前端技术，网站制作和开发，大学期间做过很多项目，很喜欢编程</p>
           </div>
         </div>
@@ -341,9 +342,9 @@
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail"> <img src="img/team/01.jpg" alt="杭州归谷培训中心" class="img-circle team-img">
           <div class="caption">
-            <h3>杭州归谷培训中心</h3>
+            <h3>北京网络职业学院培训机构</h3>
             <p>前端培训</p>
-            <p>主要培训HTMl，CSS，JS，Jquery技术，还有ajax，ui等基础知识和一些常见的angular，react等MVC框架</p>
+            <p>主要培训HTMl，CSS，JS，Jquery技术，还有ajax，ui等基础知识和一些常见的vue，react等MVC框架</p>
           </div>
         </div>
       </div>
@@ -351,15 +352,15 @@
       
 	  
       <div class="col-md-3 col-sm-6">
-        <div class="thumbnail"> <img src="img/team/03.jpg" alt="浙大网新" class="img-circle team-img">
+        <div class="thumbnail"> <img src="img/team/03.jpg" alt="河南科先网络科技有限公司" class="img-circle team-img">
           <div class="caption">
-            <h3>浙大网新</h3>
+            <h3>河南科先网络科技有限公司</h3>
             <p>前端工程师</p>
-            <p>工作时间：2014.5-2015.12，主要从事金融电商行业的网站开发，包括金融管理系统，电商网站，移动端商城等等</p>
+            <p>工作时间：2019.6-2020.5，Javascript数据处理，Ajax交互开发，Web接口设计与开发，网页制作</p>
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6">
+     <!-- <div class="col-md-3 col-sm-6">
         <div class="thumbnail"> <img src="img/team/04.jpg" alt="欧工国际" class="img-circle team-img">
           <div class="caption">
             <h3>欧工国际</h3>
@@ -367,7 +368,7 @@
             <p>工作时间：2015.12-至今，主要从事欧工商城的前端页面开发，和用threejs引擎做网页3d效果包括移动端3d效果</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
@@ -411,13 +412,13 @@
     </div>
     <div class="col-md-8 col-md-offset-2">
       <div class="col-md-4"> <i class="fa fa-map-marker fa-2x"></i>
-        <p>上海市闵行区申滨路1058弄57号</p>
+        <p>丰台区洋桥72院</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-envelope-o fa-2x"></i>
-        <p>admin@ymjihe.com</p>
+        <p>zby745853073@163.com</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-phone fa-2x"></i>
-        <p>QQ:406641830</p>
+        <p>电话:17812118806</p>
       </div>
       <hr>
       <div class="clearfix"></div>
@@ -453,16 +454,12 @@
 </div>
 <nav id="footer">
   <div class="container">
-    <div class="pull-left fnav">
-      <p>Copyright &copy; 2016 作者：Baron. 前端工程师 
-    </div>
     <div class="pull-right fnav">
       <ul class="footer-social">
-	    <li><a href="http://v.t.sina.com.cn/share/share.php?url=http://blog.youzewang.com/jianli&title=Baron简历"><i class="icon iconfont">&#xe66e;</i></a></li>
-        <li><a href="http://connect.qq.com/widget/shareqq/index.html?url=http://blog.youzewang.com/jianli=&title=Baron简历"> <i class="icon iconfont">&#xe629;</i></a></li>
-        <li><a href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://blog.youzewang.com/jianli&title=Baron简历"> <i class="icon iconfont">&#xe616;</i></a></li>
-
-        <li><a href="http://share.renren.com/share/buttonshare.do?link=http://blog.youzewang.com/jianli&title=Baron简历"><i class="icon iconfont">&#xe66b;</i></a></li>
+	    <li><a href="JavaScript:;"><i class="icon iconfont">&#xe66e;</i></a></li>
+        <li><a href="JavaScript:;"> <i class="icon iconfont">&#xe629;</i></a></li>
+        <li><a href="JavaScript:;"> <i class="icon iconfont">&#xe616;</i></a></li>
+        <li><a href="JavaScript:;"><i class="icon iconfont">&#xe66b;</i></a></li>
       </ul>
     </div>
   </div>
